--- a/Calculator_Vault/Compound_Interest_Calculator.html
+++ b/Calculator_Vault/Compound_Interest_Calculator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Interest Calculator</title>
+    <title>Compound Interest Calculator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
@@ -41,9 +41,9 @@
         <div class="d-grid gap-2 col-3 mx-auto m-5">
             <button class="btn btn-dark p-3" type="button" onclick="calculate()">Calculate Compound Interest</button>
         </div>
-
         <div>
             <h1 class="text-center" id="interstResult"></h1>
+            <h1 class="text-center" id="interstResult1"></h1>
         </div>
     </div>
     <!-- Copyright -->
@@ -51,3 +51,27 @@
         © 2025 Copyright:
         <a class="text-reset fw-bold" href="#"> By Rushi Shivale</a>
     </div>
+
+    <Script>
+        function calculate(){
+            let principal = document.getElementById("pramt").value;
+            let rate= document.getElementById("roi").value;
+            let time = document.getElementById("time").value;
+            let result = document.getElementById("interstResult");
+            let result1 = document.getElementById("interstResult1");
+
+            // Convert interest rate to decimal
+            let interestRate = rate / 100;
+    
+            // Apply compound interest formula: A = P(1 + r/n)^(nt)
+            let amount = principal * Math.pow((1 + interestRate ), time);
+    
+            // Calculate interest earned
+            let interest = amount - principal;
+            result.innerHTML= "Total amount is "+(amount.toFixed(2));
+            result1.innerHTML="interest earned "+(interest.toFixed(2));
+
+        }
+    </Script>
+</body>
+</html>
