BMI calculator link update

--- a/Calculator_Vault/index.html
+++ b/Calculator_Vault/index.html
@@ -112,7 +112,7 @@
                   <div class="card-body">
                     <h5 class="card-title">BMI Calculator</h5>
                     <p class="card-text">BMI is calculated measure of weight and height.It is categorized into underweight, healthy weight, overweight, and obesity.</p>
-                    <a href="#" class="btn btn-primary">Calculate Now !!!</a>
+                    <a href="BMI_Calculator.html" class="btn btn-primary">Calculate Now !!!</a>
                   </div>
                 </div>
             </div>
