--- a/Calculator_Vault/BMI_Calculator.html
+++ b/Calculator_Vault/BMI_Calculator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Age Calculator</title>
+    <title>BMI Calculator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
@@ -12,6 +12,7 @@
     <div class="container-fluid bg-primary text-white text-center p-3">
         <h1 class="display-1"><b>BMI Calculator</b></h1>
     </div>
+    <p class="text-center">Know your BMI(Body Mass Index) and Body type</p>
     <div class="container-fluid bg-primary-subtle text-primary-emphasis p-5">
         <div class="row row-cols-lg-auto g-3 align-items-center">
             <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg"><h1>Enter Your Weight (in kg): </h1></label>
@@ -39,6 +40,7 @@
 
         <div>
             <h1 class="text-center" id="result"></h1>
+            <h1 class="text-center" id="result1"></h1>
         </div>
         <br><br>
         <img src="bmi_image.jpg" class="img-fluid" alt="BMI Index Image">
@@ -53,6 +55,13 @@
         function BMI(){
             let w = document.getElementById("kg").value;
             let h= document.getElementById("cm").value;
+
+            // Validate input
+            if (w === "" || h === "" || isNaN(w) || isNaN(h) || w <= 0 || h <= 0) {
+                document.getElementById("result").innerHTML = "Please enter valid positive numbers!";
+            return;
+            }
+
             // formula is kg/m*m
             // Convert cm to m and Calculating the m*m
             let z = (h*h)/10000 ;
@@ -60,7 +69,18 @@
             // calculate BMI 
             let x = w/z ;
 
+            // Determine BMI category
+            let category;
+            if (x < 16) category = "severe thinness";
+            else if (x < 17) category = "Moderate Thinness";
+            else if (x < 18.5) category = "Mild Thinness";
+            else if (x < 25) category = "Normal ";
+            else if (x < 30) category = "Over Weight";
+            else category = "Obese";
+
+
             document.getElementById("result").innerHTML= "Your BMI is "+x.toFixed(2);
+            document.getElementById("result1").innerHTML= "You have "+category+" body type";
         }
     </script>
 </body>
