--- a/Calculator_Vault/Compound_Interest_Calculator.html
+++ b/Calculator_Vault/Compound_Interest_Calculator.html
@@ -9,8 +9,13 @@
 
 </head>
 <body class="bg-primary-subtle">
-    <div class="container-fluid bg-primary text-white text-center p-3">
-        <h1 class="display-1"><b>Compound Interest Calculator</b></h1>
+    <div class="container-fluid bg-primary text-white p-3 row">
+        <a class="icon-link icon-link-hover text-white col-1" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="index.html">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-square-fill" viewBox="0 0 16 16" style="width: 48px; height: 48px;">
+                <path d="M16 14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2zm-4.5-6.5H5.707l2.147-2.146a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L5.707 8.5H11.5a.5.5 0 0 0 0-1"/>
+              </svg>
+        </a>
+        <h1 class="display-1 text-center col-10"><b>Compound interest Calculator</b></h1>
     </div>
     <div class="container-fluid bg-primary-subtle text-primary-emphasis p-5">
         <div class="row row-cols-lg-auto g-3 align-items-center">
