--- a/Calculator_Vault/index.html
+++ b/Calculator_Vault/index.html
@@ -39,11 +39,11 @@
                       Dropdown links
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">Simple Calculator</a></li>
-                      <li><a class="dropdown-item" href="#">Age Calculator</a></li>
-                      <li><a class="dropdown-item" href="#">Time Duration Calculator</a></li>
-                      <li><a class="dropdown-item" href="#">Simple interest Calculator</a></li>
-                      <li><a class="dropdown-item" href="#">Compound interest Calculator</a></li>
+                      <li><a class="dropdown-item" href="Simple_Calculator.html">Simple Calculator</a></li>
+                      <li><a class="dropdown-item" href="Age_Calculator.html">Age Calculator</a></li>
+                      <li><a class="dropdown-item" href="BMI_Calculator.html">BMI Calculator</a></li>
+                      <li><a class="dropdown-item" href="Simple_interest.html">Simple interest Calculator</a></li>
+                      <li><a class="dropdown-item" href="Compound_Interest_Calculator.html">Compound interest Calculator</a></li>
                     </ul>
                   </li>
                   <li class="nav-item m-2">
@@ -82,7 +82,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Time Duration Calculator</h5>
                     <p class="card-text">Calculate time duration easily with our Time Calculator. Enter start and end times to find the total hours and minutes.</p>
-                    <a href="#" class="btn btn-primary">Calculate Now !!!</a>
+                    <a href="Time_calculator.html" class="btn btn-primary">Calculate Now !!!</a>
                   </div>
                 </div>
             </div>
