--- a/Calculator_Vault/index.html
+++ b/Calculator_Vault/index.html
@@ -26,13 +26,13 @@
             <div class="container-fluid">
               <a class="navbar-brand display-1" href="#">
                 <img src="cc-logo-design.jpg" alt="logo" width="30" height="30" class="d-inline-block align-text-top">
-                <span class="fs-3">Calculator Vault</span>
+                <span class="fs-3"><b>Calculator Vault</b></span>
               </a>
             </div>
             <div class="collapse navbar-collapse " id="navbarNav">
                 <ul class="navbar-nav h5">
                   <li class="nav-item m-2">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item dropdown m-2">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -47,10 +47,10 @@
                     </ul>
                   </li>
                   <li class="nav-item m-2">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="About.html">About</a>
                   </li>
                   <li class="nav-item m-2">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="Contact.html">Contact</a> 
                   </li>
                 </ul>
               </div>
