--- a/Calculator_Vault/About.html
+++ b/Calculator_Vault/About.html
@@ -60,7 +60,7 @@
         </nav>
         <div class="container text-center rounded pb-5 m-1 abt row justify-content-center">
             <h1 class="display-1 p-4"><b>About us</b></h1>
-            <p class="col-8 align-self-center fs-4 fw-medium"> Welcome to Calculator Vault, Your ultimate destination for all types of calculators in one place! 
+            <p class="align-self-center fs-5 fw-medium"> Welcome to Calculator Vault, Your ultimate destination for all types of calculators in one place! 
                 Whether you need a scientific calculator, financial calculator, BMI calculator, unit converter, or any other
                 specialized tool, we've got you covered.Our goal is to provide a simple, fast, and efficient way to perform 
                 calculations without the hassle of switching between multiple apps or websites. With a user-friendly interface 
