--- a/Calculator_Vault/index.html
+++ b/Calculator_Vault/index.html
@@ -24,7 +24,7 @@
         <!-- ***** Navbar ***** -->
         <nav class="navbar navbar-expand-lg navbar-light mt-2 p-2">
             <div class="container-fluid">
-              <a class="navbar-brand display-1" href="#">
+              <a class="navbar-brand display-1" href="index.html">
                 <img src="cc-logo-design.jpg" alt="logo" width="30" height="30" class="d-inline-block align-text-top">
                 <span class="fs-3"><b>Calculator Vault</b></span>
               </a>
