--- a/Calculator_Vault/index.html
+++ b/Calculator_Vault/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator Vault</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <style>
@@ -78,14 +78,14 @@
               </div>
             </div>
             <div class="col-sm-4">
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">Time Duration Calculator</h5>
-                    <p class="card-text">Calculate time duration easily with our Time Calculator. Enter start and end times to find the total hours and minutes.</p>
-                    <a href="Time_calculator.html" class="btn btn-primary">Calculate Now !!!</a>
-                  </div>
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">BMI Calculator</h5>
+                  <p class="card-text">BMI is calculated measure of weight and height.It is categorized into underweight, healthy weight, overweight, and obesity.</p>
+                  <a href="BMI_Calculator.html" class="btn btn-primary">Calculate Now !!!</a>
                 </div>
-            </div>
+              </div>
+          </div>
         </div>
         <!-- second row -->
         <div class="row">
@@ -106,15 +106,6 @@
                   <a href="Compound_Interest_Calculator.html" class="btn btn-primary">Calculate Now !!!</a>
                 </div>
               </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">BMI Calculator</h5>
-                    <p class="card-text">BMI is calculated measure of weight and height.It is categorized into underweight, healthy weight, overweight, and obesity.</p>
-                    <a href="BMI_Calculator.html" class="btn btn-primary">Calculate Now !!!</a>
-                  </div>
-                </div>
             </div>
         </div>
 
